# Backdoor-Executor

./: .gitignore  BUILD_FIX_README.md  CMakeLists.txt  CMakeLists.txt.bak  CMakeLists.txt.ci  CMakeLists.txt.cpp11  CMakeLists.txt.fix  CMakeLists.txt.fix2  CMakeLists.txt.fixed  CMakeLists.txt.ios_fix  CMakeLists.txt.simple  Dockerfile  JIT_Enabler.shortcut  MIGRATION_GUIDE.md  Makefile  Makefile.bak  Makefile.ios  Makefile.modifications  Makefile.new  PR_DESCRIPTION.md  README.md  README_BUILD.md  add_missing_functions.cpp  add_missing_functions_snc.cpp  add_wrapper_to_cmake.sh  apply_final_fixes.sh  apply_final_fixes_part2.sh  apply_isolation_fixes.sh  build-ios.sh  build.sh  build_dylib.sh  build_executor.sh  build_improved.sh  build_ios_dylib.sh  ci_fixes.patch  clean_ios_compat.h  cmake_fix.txt  codemagic.yaml  copy_library.sh  dobby_fix.cpp  (+68 more)
VM/: CMakeLists.txt
VM/src/: lfunc.cpp  lvmexecute.cpp  lvmroblox.cpp
VM/src/Luau/: Bytecode.h  Common.h
source/: CMakeLists.txt  Files.lua  README.md  lfs.c  lfs.c.bak2  lfs.c.tmp2  library.cpp  library.cpp.bak2  library.cpp.final  library.cpp.fix  library.cpp.fixed2  library.cpp.new  library.hpp  lua_wrapper.c  lua_wrapper.h  lua_wrapper_impl.c  main.lua  main.luau  minimal_vm.cpp
source/cpp/: CMakeLists.txt  CMakeLists.txt.ci  CMakeLists.txt.fix  CMakeLists.txt.ios_fix  CMakeLists.txt.objcpp  CMakeLists.txt.werror  Diagnostic.cpp  Diagnostic.hpp  Doxyfile.in  ExecutorConfigStubs.cpp  LuaUI.hpp  Makefile  OBJC_CPP_README.md  ci_config.h  dobby_defs.h  dobby_wrapper.cpp  dobby_wrapper.cpp.fixed  enhanced_ui.hpp  error_handling.hpp  error_handling_impl.cpp  filesystem_utils.h  globals.hpp  globals_no_lua.hpp  include_guard.h  init.cpp  init.hpp  init.hpp.bak  init_decl.hpp  ios_compat.h  library.cpp  logging.cpp  logging.hpp  lua_compatibility.h  luadefs_wrapper.h  luau_fixes.cpp  luau_fixes.h  main.cpp  native-lib.cpp  native-lib.cpp.bak2  native-lib.cpp.old  (+6 more)
source/cpp/anti_detection/: anti_debug.hpp  obfuscator.hpp  vm_detect.hpp
source/cpp/bridge/: lua_isolation.h  lua_objc_bridge.cpp  objc_isolation.h
source/cpp/exec/: funcs.hpp  impls.hpp
source/cpp/hooks/: hooks.cpp  hooks.hpp  hooks.hpp.fix  hooks.hpp.new
source/cpp/ios/: ExecutionEngine.h  ExecutionEngine.mm  FileSystem.h  FileSystem.mm  FileSystem.mm.bak3  FileSystem.mm.fixed  FileSystem.mm.new  FloatingButtonController.h  FloatingButtonController.mm  GameDetector.h  GameDetector.h.fix  GameDetector.h.fixed  GameDetector.h.stub  GameDetector.mm  GameDetector.mm.fixed  GameDetector_CI.cpp  IOSFileSystem.h  IOSFileSystem.mm  JailbreakBypass.h  JailbreakBypass.mm  LuaInterpreterIntegration.h  LuaInterpreterIntegration.mm  MemoryAccess.h  MemoryAccess.h.fixed  MemoryAccess.mm  MethodSwizzling.h  PatternScanner.h  PatternScanner.h.bak2  PatternScanner.h.bak3  PatternScanner.h.new  PatternScanner.h.old  PatternScanner.h.stub  PatternScanner.mm  PatternScanner.mm.bak  PatternScanner.mm.bak2  PatternScanner_CI.cpp  PresenceSystem.h  PresenceSystem.mm  PresenceSystemStatics.cpp  ScriptManager.h  (+13 more)
source/cpp/ios/advanced_bypass/: DynamicMessageDispatcher.h  DynamicMessageDispatcher.mm  ExecutionIntegration.cpp  ExecutionIntegration.cpp.stub  ExecutionIntegration.h  ExecutionIntegration.mm  HttpClient.h  HttpClient.mm  HttpClient.mm.bak  HttpClient.mm.bak3  HttpClient.mm.bak4  HttpClient.mm.bak5  HttpIntegration.mm  LoadstringSupport.h  LoadstringSupport.mm  MethodSwizzlingExploit.h  MethodSwizzlingExploit.mm  MethodSwizzlingExploit.mm.bak  WebKitExploit.h  WebKitExploit.mm
source/cpp/ios/ai_features/: AIConfig.cpp  AIConfig.h  AIConfig.mm  AIConfig_updated.h  AIConfig_updated.mm  AIImplementationGuide.md  AIIntegration.cpp  AIIntegration.h  AIIntegration.mm  AIIntegration.mm.backup  AIIntegration.mm.beforefix  AIIntegration.mm.rej  AIIntegrationExample.mm  AIIntegrationManager.h  AIIntegrationManager.mm  AIIntegrationManager_updated.h  AIIntegrationValidator.cpp  AIIntegration_updated.mm  AIRequest.h  AIResponse.h  AISystemInitializer.h  AISystemInitializer.h.bak  AISystemInitializer.mm  HybridAISystem.cpp  HybridAISystem.h  HybridAISystem.h.bak2  HybridAISystem.mm  OfflineAISystem.h  OfflineAISystem.mm  OfflineService.h  OfflineService.mm  OnlineService.h  OnlineService.mm  ScriptAssistant.h  ScriptAssistant.mm  ScriptAssistant.mm.orig  ScriptAssistant.mm.rej  SelfModifyingCodeSystem.h  SelfModifyingCodeSystem.mm  SelfTrainingManager.h  (+10 more)
source/cpp/ios/ai_features/local_models/: GeneralAssistantModel.h  GeneralAssistantModel.h.bak  GeneralAssistantModel.mm  LocalModelBase.h  LocalModelBase.mm  ScriptGenerationModel.cpp  ScriptGenerationModel.h  ScriptGenerationModel.h.backup3  ScriptGenerationModel.h.bak2  ScriptGenerationModel.h.bak4  ScriptGenerationModel.mm  SimpleDummyModel.h  SimpleDummyModel.mm  VulnerabilityDetectionModel.h  VulnerabilityDetectionModel.mm  (+2 more)
source/cpp/ios/ui/: AssistantButtonController.h  AssistantButtonController.mm  AssistantButtonController.mm.fixed  MainViewController.cpp  MainViewController.h  MainViewController.mm  MainViewController_tabs.mm  ScriptEditorViewController.h  ScriptManagementViewController.h  UIDesignDocument.md  UIDesignSystem.h  VulnerabilityViewController.cpp  VulnerabilityViewController.h  VulnerabilityViewController.mm  VulnerabilityViewController.mm.orig  VulnerabilityViewController_stub.mm
source/cpp/luau/: laux.cpp  lauxlib.h  lbaselib.cpp  lbitlib.cpp  lcorolib.cpp  ldblib.cpp  linit.cpp  lmathlib.cpp  loslib.cpp  lstrlib.cpp  ltablib.cpp  lua.hpp  lua_defs.h  lua_register.h  luaconf.h  luaconf.h.fixed  luaconf.h.modified  luaux.h  lutf8lib.cpp
source/cpp/memory/: ci_compat.h  mem.cpp  mem.hpp  signature.hpp  signature.hpp.bak
source/cpp/naming_conventions/: function_resolver.cpp  function_resolver.h  naming_conventions.cpp  naming_conventions.h  script_preprocessor.cpp  script_preprocessor.h
source/cpp/security/: anti_tamper.cpp  anti_tamper.hpp  anti_tamper.hpp.cpp
source/cpp/stubs/: empty_stub.cpp
source/cpp/stubs/json/: json.h
source/cpp/tests/: integration_test.cpp
source/lua_stub/: lua.h  lualib.h
(+132 files in other folders)
